--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -203,10 +203,6 @@ msgctxt "field:loan,current_loan_shares:"
 msgid "Current Loan Share"
 msgstr "Quotité courante"
 
-msgctxt "field:loan,dates_are_calculated:"
-msgid "Dates are calculated"
-msgstr "Les dates sont calculées"
-
 msgctxt "field:loan,deferal:"
 msgid "Deferal"
 msgstr "Différé"
@@ -335,10 +331,6 @@ msgctxt "field:loan.increment,currency_symbol:"
 msgid "Currency Symbol"
 msgstr "Symbole de la Devise"
 
-msgctxt "field:loan.increment,dates_are_calculated:"
-msgid "Dates are calculated"
-msgstr "Les dates sont calculées"
-
 msgctxt "field:loan.increment,deferal:"
 msgid "Deferal"
 msgstr "Différé"
@@ -358,6 +350,10 @@ msgstr "ID"
 msgctxt "field:loan.increment,loan:"
 msgid "Loan"
 msgstr "Prêt"
+
+msgctxt "field:loan.increment,loan_state:"
+msgid "Loan State"
+msgstr "Etat du prêt"
 
 msgctxt "field:loan.increment,manual:"
 msgid "Manual"
@@ -684,10 +680,6 @@ msgctxt "model:ir.action,name:"
 msgid "Loan Share Propagation"
 msgstr "Propager Quotité"
 
-msgctxt "model:ir.action,name:act_add_manual_increment"
-msgid "Add Manual Increment"
-msgstr "Ajouter un palier manuel"
-
 msgctxt "model:ir.action,name:act_display_insured_outstanding_loan_balance"
 msgid "Insured Outstanding Loan Balances"
 msgstr "Encours"
@@ -986,10 +978,6 @@ msgid "Quota share"
 msgstr "Quotité"
 
 msgctxt "view:loan:"
-msgid "_Insert Manual Increment"
-msgstr "_Insérer un palier manuel"
-
-msgctxt "view:loan:"
 msgid "_Modify"
 msgstr "_Modifier"
 
@@ -1012,14 +1000,6 @@ msgstr "Encours assurés"
 msgctxt "view:party.party:"
 msgid "Loan Information"
 msgstr "Emprunteur"
-
-msgctxt "wizard_button:loan.increment.create,increment,create_increment:"
-msgid "Create"
-msgstr "Créer"
-
-msgctxt "wizard_button:loan.increment.create,increment,end:"
-msgid "Cancel"
-msgstr "Annuler"
 
 msgctxt ""
 "wizard_button:party.display_insured_outstanding_loan_balance,insured_outstanding_loan_balance_view,end:"
