endorsement : Add 'active' field on endorsement definitions
review http://rietveld.coopengo.com/12680002

--- a/modules/endorsement/locale/fr_FR.po
+++ b/modules/endorsement/locale/fr_FR.po
@@ -1349,6 +1349,10 @@ msgctxt "field:endorsement.definition,preview_state:"
 msgid "Preview States"
 msgstr "Aperçu à utiliser"
 
+msgctxt "field:endorsement.definition,active:"
+msgid "Active"
+msgstr "Actif"
+
 msgctxt "field:endorsement.definition,products:"
 msgid "Products"
 msgstr "Produits"
