endorsement : do not allow endorsement before contract start date by default fix #2427 http://rietveld.coopengo.com/18440002/

--- a/modules/endorsement/locale/fr_FR.po
+++ b/modules/endorsement/locale/fr_FR.po
@@ -34,6 +34,22 @@ msgctxt "error:endorsement.contract.activation_history:"
 msgid "Update %s"
 msgstr "Mise à jour de %s"
 
+msgctxt "error:endorsement.contract.change_extra_data:"
+msgid ""
+"The endorsement's effective date must be posterior to the contracts' start "
+"date"
+msgstr ""
+"La date d'effet de l'avenant doit être postérieure à la date d'effet des "
+"contrats"
+
+msgctxt "error:endorsement.contract.change_start_date:"
+msgid ""
+"The endorsement's effective date must be posterior to the contracts' start "
+"date"
+msgstr ""
+"La date d'effet de l'avenant doit être postérieure à la date d'effet des "
+"contrats"
+
 msgctxt "error:endorsement.contract.contact:"
 msgid "New version"
 msgstr "Nouvelle version"
@@ -102,6 +118,22 @@ msgctxt "error:endorsement.contract.option:"
 msgid "Versions Modifications"
 msgstr "Modification des versions"
 
+msgctxt "error:endorsement.contract.subscriber_change:"
+msgid ""
+"The endorsement's effective date must be posterior to the contracts' start "
+"date"
+msgstr ""
+"La date d'effet de l'avenant doit être postérieure à la date d'effet des "
+"contrats"
+
+msgctxt "error:endorsement.contract.terminate:"
+msgid ""
+"The endorsement's effective date must be posterior to the contracts' start "
+"date"
+msgstr ""
+"La date d'effet de l'avenant doit être postérieure à la date d'effet des "
+"contrats"
+
 msgctxt "error:endorsement.contract.terminate:"
 msgid ""
 "The termination date must be anterior to the end date of the modified "
@@ -115,6 +147,14 @@ msgid "The termination date must be posterior to the contract start date: %s"
 msgstr ""
 "La date de résiliation doit être postérieure à la date de début du contrat: "
 "%s"
+
+msgctxt "error:endorsement.contract.void:"
+msgid ""
+"The endorsement's effective date must be posterior to the contracts' start "
+"date"
+msgstr ""
+"La date d'effet de l'avenant doit être postérieure à la date d'effet des "
+"contrats"
 
 msgctxt "error:endorsement.contract:"
 msgid "Activation History Modifications"
@@ -146,6 +186,14 @@ msgid ""
 msgstr ""
 "Il ne peut y avoir qu'un seul avenant en cours de saisie sur un contrat "
 "donné."
+
+msgctxt "error:endorsement.start.dummy_step:"
+msgid ""
+"The endorsement's effective date must be posterior to the contracts' start "
+"date"
+msgstr ""
+"La date d'effet de l'avenant doit être postérieure à la date d'effet des "
+"contrats"
 
 msgctxt "error:endorsement.start:"
 msgid "It is not possible to resume an already applied endorsement"
